src/main.css
@import 'tailwindcss';
@plugin "daisyui" {
    themes: light --default, dark --prefersdark;
};

/* TODO try to remove this, creates ambiguity (is it being applied by daisyUI
   or prefers-color-scheme? Answer is daisyUI but that won't be clear in a few
   months. Without this it fails to build with:
     Error: Cannot apply unknown utility class: bg-prune

   I have these defined in tailwind.config.js, but if I include that I get:
     TypeError: b is not a function

    Also need to find a way to not have this boilerplate in every CSS file.
*/
@theme {
    --color-prune: oklch(0.83 0.155 66.29);
    --color-repot: oklch(0.42 0.081 50.5);
};

@layer base {
    @media (prefers-color-scheme: dark) {
        :root {
            --color-prune: oklch(0.85 0.1265 66.29);
            --color-repot: oklch(0.38 0.0709 54.66);
        }
    }
};

@plugin "daisyui/theme" {
    name: "dark";
    --color-primary: oklch(0.6569 0.196 275.75/1);
    --color-accent: oklch(0.7676 0.184 183.61/1);
    --color-neutral: oklch(0.313815 0.021108 254.139175/1);
    --color-error: oklch(0.7176 0.221 22.18/1);
    --color-info: oklch(0.7206 0.191 231.6/1);
    --color-success: oklch(64.8% 0.150 160/1);
    --color-prune: oklch(0.85 0.1265 66.29);
    --color-repot: oklch(0.38 0.0709 54.66);
};
@plugin "daisyui/theme" {
    name: "light";
    --color-primary: oklch(0.4912 0.3096 275.75/1);
    --color-accent: oklch(0.7676 0.184 183.61/1);
    --color-base-100: #F2F2F2;
    --color-base-200: #E5E6E6;
    --color-base-300: #dddddd;
    --color-neutral: #FFFFFF;
    --color-neutral-content: #000;
    --color-error: oklch(0.7176 0.221 22.18/1);
    --color-info: oklch(0.7206 0.191 231.6/1);
    --color-success: oklch(64.8% 0.150 160/1);
    --color-prune: oklch(0.83 0.155 66.29);
    --color-repot: oklch(0.42 0.081 50.5);
};

/*
  The default border color has changed to `currentcolor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentcolor);
  }
}

.card, .card-collapse {
    @apply bg-neutral text-neutral-content outline-none!;
}

.card-body {
    @apply p-4;
}

.section {
    @apply flex flex-col w-full max-w-96 bg-base-200 px-4 rounded-2xl;
}

.section-title {
    @apply flex text-center w-full min-h-[3.75rem];
}

.section-title-font {
    @apply text-xl font-medium min-h-0 h-auto py-1 m-auto cursor-default;
}

.section-content {
    @apply min-w-0 min-h-fit px-2 md:px-4 pb-2 md:pb-4;
}

/* Prevent PlantCard and GroupCard from expanding when focused */
/* Causes card to start expanding while page loads when href is clicked */
.card-collapse:focus:not(:has(> input[type="checkbox"]:checked)) {
    grid-template-rows: auto 0fr;
}
.card-collapse:focus:not(:has(> input[type="checkbox"]:checked)) > .collapse-content {
    visibility: hidden;
    min-height: 0px;
    padding-bottom: 0rem;
}

.loading-lg {
    width: 4rem;
}

.combobox-options-div {
    @apply absolute top-20 mt-2 max-h-60 w-full overflow-auto rounded-md bg-neutral;
}

.combobox-option {
    @apply relative text-white text-center select-none py-2;
}

.tab-group {
    @apply flex space-x-1 rounded-xl bg-neutral p-1;
}

.tab-option {
    @apply w-full rounded-lg py-2.5 font-semibold focus:outline-hidden;
}

.tab-option-selected {
    @apply bg-accent text-accent-content;
}

.input::placeholder {
    opacity: 0.5;
}

/* Change input focus color, remove gap between outline and input */
.input, .input-bordered, .textarea-bordered {
    @apply focus:border-accent focus:outline-accent outline-offset-0!;
}

.no-scrollbar::-webkit-scrollbar {
    display: none;
}

.no-scrollbar {
    -ms-overflow-style: none;
    scrollbar-width: none;
}

/* Repot modal pot size option */
.pot-size {
    @apply text-xl md:text-2xl text-center font-bold;
    @apply flex rounded-full bg-base-300 focus:outline-hidden;
}

/* Repot modal selected pot size option */
.pot-size-selected {
    @apply bg-primary text-white;
}

/* Dark mode custom pot size placeholder text */
html[data-theme="dark"] .pot-size-selected::placeholder {
    @apply text-white/50;
}

/* Light mode custom pot size placeholder text */
html[data-theme="light"] .pot-size::placeholder {
    @apply text-black/50;
}

html[data-theme="light"] .pot-size-selected::placeholder {
    @apply text-white/65;
}

.btn-close {
    @apply btn btn-sm btn-ghost;
    border-radius: 9999px;
    padding: 0;
}

/* Keep dropdown button hover highlight visible while dropdown is open */
.dropdown > .btn-ghost:focus {
    background-color: var(--fallback-bc,oklch(var(--bc)/0.2));
}

.btn-close:focus-visible {
    @apply outline-0;
}

.dropdown-options {
    @apply menu menu-md z-99 p-2 shadow-sm bg-base-300 rounded-box;
}

/* Prevent line wrap in dropdown options */
.dropdown-content > li > a, .dropdown-content > li > button {
    @apply whitespace-nowrap;
}

/* Revert to old way of hiding/showing dropdown (more reliable) */
/* Fixes dropdown clickable when closed even if z-index not set */
.dropdown:is(:not(details)) .dropdown-options {
    @apply invisible;
}
.dropdown.dropdown-open .dropdown-options,
.dropdown:focus-within .dropdown-options,
.dropdown:not(.dropdown-hover):focus .dropdown-options {
    @apply visible;
}

/* Wraps Navbar title dropdown contents (plant/group details) */
.details-card {
    @apply card card-sm bg-neutral text-neutral-content w-72 p-2 mt-2 mx-auto shadow-sm;
    /* Allow scrolling inside card, eg phone in landscape orientation */
    @apply max-h-[calc(100svh-4rem)] overflow-y-auto overscroll-contain;
    /* Prevent long strings without spaces making card side scroll */
    @apply overflow-x-hidden;
}

.btn-prune {
    @apply bg-prune outline-prune text-warning-content border border-transparent;
}

.btn-prune:hover {
    background-color: color-mix(in oklab, var(--color-prune), black 10%);
    border-color: color-mix(in oklab, var(--color-prune), black 10%);
}

.alert {
    @apply whitespace-normal md:whitespace-nowrap;
}

.photo-thumbnail {
    @apply rounded-lg object-cover;
}

/* Make cursor-pointer override cursor style for all children */
.cursor-pointer, .cursor-pointer * {
    cursor: pointer !important;
}

.btn-error {
    color: #eee;
}

/* Prevent iOS zooming in when textarea focused */
.textarea {
    @apply text-base;
}

/* Fix modal filling full height on iOS safari when address bar visible */
.modal-box {
    max-height: calc(100dvh - 5em);
}

.floating-footer {
    @apply fixed bottom-0 z-50 flex flex-row my-4 p-4 gap-8;
    @apply bg-gray-600/50 rounded-box shadow-inner transition-all duration-300;
}

.floating-footer-hidden {
    @apply translate-y-24 scale-90 opacity-0;
}

.floating-footer-visible {
    @apply translate-y-0 scale-100 opacity-100;
}

/* Allows breaking long strings with no spaces to prevent overflow */
/* Only breaks words if there is no other opportunity (eg spaces) */
.break-anywhere {
    overflow-wrap: anywhere;
    word-break: break-word;
}

/* Fix text wrapping to multiple lines on mobile */
.toast {
    @apply min-w-max;
}

